--- a/style.css
+++ b/style.css
@@ -45,6 +45,52 @@ table {
 
 /* Here the project starts */
 
+* {
+    box-sizing: border-box;
+}
+
+body {
+	background-color: #2b88f0;
+}
+
+.randomSection {
+	height: 100vh; 
+	display: flex; 
+	flex-direction: column; 
+	justify-content: center; 
+	align-items: center; 
+	color: white;
+}
+
+h1 {
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+	/*margin-bottom: 15px;*/
+	margin: 10px 0 20px;
+}
+
+#textarea {
+	width: 200px; 
+	height: 200px;
+}
+
 .list-item{
     list-style-type: none;
+	background-color: #f0932b;
+    color: #fff;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin: 0 5px 10px 0;
+    font-size: 14px;
+    display: inline-block;
+}
+
+@keyframes boxAnimation {
+	
+}
+
+.item-change {
+	animation: boxAnimation 4s;
+	
 }
